modal code finish

--- a/scss/blocks/_main.scss
+++ b/scss/blocks/_main.scss
@@ -4,7 +4,7 @@
     margin-top: 100px;
     padding: 20px 0;
 
-    background: rgb(49, 222, 6);
+    background: rgba(#153C3C, 0.9);
 }
 .section-title{
     padding: 0 0 40px 0;
