--- a/css/main.css
+++ b/css/main.css
@@ -460,7 +460,7 @@ ul, li {
   width: 100%;
   margin-top: 100px;
   padding: 20px 0;
-  background: rgb(49, 222, 6);
+  background: rgba(21, 60, 60, 0.9);
 }
 
 .section-title {
@@ -721,4 +721,85 @@ ul, li {
     align-items: center;
     gap: 10px;
   }
+}
+.modal-container {
+  z-index: 100000;
+  display: none;
+  opacity: 0;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: rgba(0, 0, 0, 0.7);
+  pointer-events: none;
+}
+
+.modal-container__event {
+  pointer-events: all;
+}
+
+.modal-container-open {
+  display: block;
+  opacity: 1;
+}
+
+.popup {
+  width: 300px;
+  background: #fff;
+  border-radius: 6px;
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(0.1);
+  padding: 30px;
+  color: #333;
+  text-align: center;
+  visibility: hidden;
+  transition: transform 0.4s, top 0.4s;
+}
+
+.open-popup {
+  top: 50%;
+  transform: translate(-50%, -50%) scale(1);
+  visibility: visible;
+}
+
+.modal-btn {
+  width: 100%;
+  padding: 10px 0;
+  margin: 5px;
+  background: #6fd649;
+  border: none;
+  color: #fff;
+  outline: none;
+  font-size: 18px;
+  border-radius: 4px;
+  cursor: pointer;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+  pointer-events: all;
+}
+
+.modal-form {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  text-align: left;
+}
+.modal-form label {
+  margin-bottom: -12px;
+}
+.modal-form input {
+  outline: none;
+  border-top: none;
+  border-left: none;
+  border-right: none;
+}
+.modal-form input[type=number]::-webkit-outer-spin-button,
+.modal-form input[type=number]::-webkit-inner-spin-button {
+  margin: 0;
+  -webkit-appearance: none;
 }/*# sourceMappingURL=main.css.map */
