--- a/scss/blocks/_modal.scss
+++ b/scss/blocks/_modal.scss
@@ -63,9 +63,33 @@
 
 
 }
-.modal-close-btn{
-    background: #fff;
-    color: #6fd649;
+.modal-form{
+    width: 100%;
 
-    border: 1px solid #6fd649 ;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+
+    text-align: left;
+
+    label{
+        margin-bottom: -12px;
+    }
+
+    input{
+        outline: none;
+
+        border-top: none;
+        border-left: none;
+        border-right: none;
+    }
+    input[type="number"]::-webkit-outer-spin-button, 
+    input[type="number"]::-webkit-inner-spin-button{
+
+
+    margin: 0;
+
+    -webkit-appearance: none;
 }
+}
+
