--- a/css/main.css
+++ b/css/main.css
@@ -405,7 +405,7 @@ ul, li {
 }
 
 .site-navbar__btn {
-  padding: 10px 20px;
+  padding: 5px 20px;
   margin-right: 0;
   border-radius: 4px;
   border: 2px solid #84A17D;
@@ -425,7 +425,7 @@ ul, li {
   font-size: 24px;
 }
 
-@media screen and (max-width: 550px) {
+@media screen and (max-width: 650px) {
   .site__navbar-list {
     position: absolute;
     top: 100px;
@@ -526,6 +526,7 @@ ul, li {
   justify-content: space-evenly;
   gap: 30px;
   flex-wrap: wrap;
+  pointer-events: none;
 }
 
 .servicePage-list__item {
@@ -556,6 +557,7 @@ ul, li {
   background: #fff;
   box-shadow: 6px 17px 22px -3px rgba(34, 60, 80, 0.2);
   display: block;
+  pointer-events: all;
 }
 .servicePage-list__item-link:hover {
   background: rgb(49, 222, 6);
@@ -583,13 +585,13 @@ ul, li {
 }
 
 .footer-logo {
+  margin-top: -30px;
   font-style: normal;
   font-weight: 400;
   font-size: 38px;
   line-height: 48px;
   letter-spacing: 1.6px;
   color: #fff;
-  background-image: url(../../img/footer-logo__bg.png);
   background-repeat: no-repeat;
   background-position: bottom right;
 }
@@ -597,7 +599,7 @@ ul, li {
 .footer-text {
   width: 250px;
   font-weight: 400;
-  font-size: 12px;
+  font-size: 18px;
   line-height: 150%;
   color: #fff;
   opacity: 0.6;
@@ -707,6 +709,7 @@ ul, li {
     justify-content: start;
   }
   .footer-logo {
+    margin: -200px;
     font-size: 30px;
   }
 }
