--- a/scss/blocks/_blocks.scss
+++ b/scss/blocks/_blocks.scss
@@ -3,5 +3,6 @@
 @import './header';
 @import './main';
 @import './servicePage';
+@import './aboutCompany.scss';
 @import './footer';
 @import './modal';
