--- a/scss/blocks/_header.scss
+++ b/scss/blocks/_header.scss
@@ -31,10 +31,32 @@
     width: 100%;
     
     margin-right: auto;
-
+    
     display: flex;
     gap: 30px;
+    
+}
+.site-navbar__list-item a{
+    padding: 5px 10px;
 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+    font-weight: 600;
+
+    pointer-events: all;
+    &:hover{
+        padding: 4px 9px;
+
+
+        border: 1px solid #fff;
+        border-radius: 3px;
+
+        background: #fff;
+        color: #153C3C !important;
+
+    }
 }
 .site-navbar__list-item-btn{
     position: absolute;
