--- a/scss/blocks/_servicePage.scss
+++ b/scss/blocks/_servicePage.scss
@@ -31,6 +31,28 @@
 .servicePage-list__item-body{
     width: 100%;
     padding: 20px;
+
+    
+}
+.servicePage-list__title{
+    height: 30px;
+    white-space: nowrap;
+
+    overflow: hidden;
+
+    text-overflow: ellipsis;
+}
+.servicePage-list__text{
+    max-width: 100%;
+    height: 40px;
+
+    white-space: nowrap;
+
+    overflow: hidden;
+
+    text-overflow: ellipsis;
+
+    // font-size: 50px;
 }
 .servicePage-list__item-link{
     width: 100%;
