--- a/scss/blocks/_aboutCompany.scss
+++ b/scss/blocks/_aboutCompany.scss
@@ -12,7 +12,7 @@
 }
 .company-desc{
     font-size: 16px;
-    
+
     color: #fff;
 }
 .company-location, .company-adress{
@@ -22,4 +22,6 @@
 }
 .company-maps{
     width: 100%;
+
+    border-radius: 6px;
 }
