--- a/scss/blocks/_blocks.scss
+++ b/scss/blocks/_blocks.scss
@@ -4,5 +4,6 @@
 @import './main';
 @import './servicePage';
 @import './aboutCompany.scss';
+@import './detailedPage';
 @import './footer';
 @import './modal';
