--- a/css/main.css
+++ b/css/main.css
@@ -485,9 +485,13 @@ ul, li {
   color: #fff;
 }
 
+.carousel-item {
+  text-align: center !important;
+}
+
 .carousel-img {
-  height: auto;
-  max-height: 580px;
+  height: 100% !important;
+  max-height: 680px;
 }
 
 .service-section__box {
@@ -554,14 +558,27 @@ ul, li {
   border-radius: 6px;
   background: #fff;
   box-shadow: 6px 5px 17px -13px rgba(34, 60, 80, 0.2);
+  pointer-events: all;
 }
 .servicePage-list__item img {
+  width: 100%;
+  max-height: 220px;
   border-radius: 6px;
+  pointer-events: none;
+}
+
+.card-img__box {
+  z-index: 10;
+  width: 100%;
+  height: 200px;
+  pointer-events: none;
 }
 
 .servicePage-list__item-body {
+  z-index: 11;
   width: 100%;
   padding: 20px;
+  pointer-events: none;
 }
 
 .servicePage-list__title {
@@ -595,6 +612,38 @@ ul, li {
   color: #fff;
 }
 
+.humans-card__item {
+  position: relative;
+  width: 240px;
+  padding: 10px;
+  text-align: center;
+  border-radius: 6px;
+  background: #fff;
+}
+
+.humans-card__img {
+  width: 220px;
+  height: 220px;
+  padding: 2px;
+  border-radius: 50%;
+  border: 5px solid #153C3C;
+}
+
+.humans-rating {
+  position: absolute;
+  top: 205px;
+  width: 100px;
+  height: 30px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  border: 3px solid #153C3C;
+  border-radius: 4px;
+  background: rgb(0, 231, 58);
+  color: yellow;
+  right: calc(50% - 50px);
+}
+
 .company__section-box {
   display: flex;
   flex-direction: column;
@@ -619,6 +668,24 @@ ul, li {
 
 .company-maps {
   width: 100%;
+  border-radius: 6px;
+}
+
+.card-detailed__box {
+  display: flex;
+  gap: 50px;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+}
+
+.card-detailed__img {
+  max-width: 400px;
+  min-width: 270px;
+}
+
+.card-detailed__body {
+  max-width: 800px;
+  color: #fff;
 }
 
 /* footer */
@@ -862,4 +929,8 @@ ul, li {
 .modal-form input[type=number]::-webkit-inner-spin-button {
   margin: 0;
   -webkit-appearance: none;
+}
+
+.error-inp {
+  border-color: rgb(255, 55, 0);
 }/*# sourceMappingURL=main.css.map */
