--- a/scss/blocks/_servicePage.scss
+++ b/scss/blocks/_servicePage.scss
@@ -24,14 +24,29 @@
     box-shadow: 6px 5px 17px -13px rgba(34, 60, 80, 0.2);
 
     img{
+        width: 100%;
+        max-height: 220px;
         border-radius: 6px;
+
+        pointer-events: none;
     }
 
+    pointer-events: all;
+    
+}
+.card-img__box{
+    z-index: 10;
+    width: 100%;
+    height: 200px;
+    
+    pointer-events: none;
 }
 .servicePage-list__item-body{
+    z-index: 11;
     width: 100%;
     padding: 20px;
 
+    pointer-events: none;
     
 }
 .servicePage-list__title{
@@ -74,4 +89,48 @@
         background: rgb(49, 222, 6);
         color: #fff;
     }
+}
+.humans-card__item{
+
+    position: relative;
+
+    width: 240px;
+    padding: 10px;
+
+    text-align: center;
+
+    border-radius: 6px;
+
+    background: #fff;
+
+}
+
+.humans-card__img{
+    width: 220px;
+    height: 220px;
+    padding: 2px;
+
+
+    border-radius: 50%;
+    border: 5px solid #153C3C;
+}
+.humans-rating{
+    position: absolute;
+    top: 205px;
+
+    width: 100px;
+    height: 30px;
+
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+
+
+    border: 3px solid #153C3C;
+    border-radius: 4px;
+
+    background: rgb(0, 231, 58);
+    color: yellow;
+
+    right: calc(50% - 50px);
 }
