--- a/css/main.css
+++ b/css/main.css
@@ -562,7 +562,7 @@ ul, li {
 }
 .servicePage-list__item img {
   width: 100%;
-  max-height: 220px;
+  height: 220px;
   border-radius: 6px;
   pointer-events: none;
 }
