--- a/scss/blocks/_servicePage.scss
+++ b/scss/blocks/_servicePage.scss
@@ -25,7 +25,7 @@
 
     img{
         width: 100%;
-        max-height: 220px;
+        height: 220px;
         border-radius: 6px;
 
         pointer-events: none;
