--- a/css/main.css
+++ b/css/main.css
@@ -390,6 +390,10 @@ ul, li {
   width: 120px;
 }
 
+.site-logo {
+  margin-top: 20px;
+}
+
 .site__navbar-list {
   position: relative;
   width: 100%;
@@ -485,13 +489,19 @@ ul, li {
   color: #fff;
 }
 
+.service-list__item {
+  border-radius: 6px;
+}
+
 .carousel-item {
   text-align: center !important;
+  border-radius: 6px !important;
 }
 
 .carousel-img {
   height: 100% !important;
   max-height: 680px;
+  border-radius: 6px;
 }
 
 .service-section__box {
