--- a/scss/blocks/_main.scss
+++ b/scss/blocks/_main.scss
@@ -27,6 +27,15 @@
 
     border-radius: 6px;
 }
+@media screen and(max-width: 400px){
+    
+.carousel-img{
+    min-height: 260px !important;
+    max-height: 680px;
+
+    border-radius: 6px;
+}
+}
 
 .service-section__box{
     width: 100%;
