--- a/css/main.css
+++ b/css/main.css
@@ -669,8 +669,22 @@ ul, li {
 }
 
 .company-title {
+  height: 150px;
+  margin: 0;
+  margin-bottom: 60px;
   font-size: 60px;
+  line-height: 1.2;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  gap: 20px;
+  flex-wrap: wrap;
   color: #fff;
+}
+
+.company-title__img {
+  width: 150px;
+  height: 150px;
 }
 
 .company-desc {
@@ -688,6 +702,30 @@ ul, li {
   border-radius: 6px;
 }
 
+@media screen and (max-width: 1000px) {
+  .company-title {
+    margin-bottom: 60px;
+    font-size: 50px;
+    line-height: 1.2;
+  }
+  .company-desc {
+    margin-top: 20px;
+    font-size: 16px;
+    color: #fff;
+  }
+}
+@media screen and (max-width: 800px) {
+  .company-title {
+    margin-bottom: 60px;
+    font-size: 40px;
+    line-height: 1.2;
+  }
+  .company-desc {
+    margin-top: 20px;
+    font-size: 16px;
+    color: #fff;
+  }
+}
 .card-detailed__box {
   display: flex;
   gap: 50px;
