--- a/scss/blocks/_aboutCompany.scss
+++ b/scss/blocks/_aboutCompany.scss
@@ -5,10 +5,27 @@
     align-items: flex-start;
     gap: 30px;
 }
+
 .company-title{
+    height: 150px;
+    // margin: 100px 0;
+    margin: 0;
+    margin-bottom: 60px;
     font-size: 60px;
 
+    line-height: 1.2;
+
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    gap: 20px;
+    flex-wrap: wrap;
+
     color: #fff;
+}
+.company-title__img{
+    width: 150px;
+    height: 150px;
 }
 .company-desc{
     font-size: 16px;
@@ -24,4 +41,32 @@
     width: 100%;
 
     border-radius: 6px;
+}
+@media screen and(max-width: 1000px){
+    .company-title{
+        margin-bottom: 60px;
+        font-size: 50px;
+    
+        line-height: 1.2;
+    }
+    .company-desc{
+        margin-top: 20px;
+        font-size: 16px;
+    
+        color: #fff;
+    }
+}
+@media screen and(max-width: 800px){
+    .company-title{
+        margin-bottom: 60px;
+        font-size: 40px;
+    
+        line-height: 1.2;
+    }
+    .company-desc{
+        margin-top: 20px;
+        font-size: 16px;
+    
+        color: #fff;
+    }
 }
