--- a/css/main.css
+++ b/css/main.css
@@ -550,7 +550,7 @@ ul, li {
 .service-list__link {
   font-size: 16px;
   margin-left: auto;
-  margin-right: 15px;
+  margin-right: auto;
   margin-bottom: 15px;
   text-align: left;
   color: blue;
