--- a/css/main.css
+++ b/css/main.css
@@ -553,7 +553,7 @@ ul, li {
   margin-right: auto;
   margin-bottom: 15px;
   text-align: left;
-  color: blue;
+  color: #6fd649;
 }
 
 .servicePage-list {
