--- a/scss/blocks/_footer.scss
+++ b/scss/blocks/_footer.scss
@@ -56,8 +56,8 @@
 }
 
 .brend-icon{
-    width: 25px;
-    height: 25px;
+    width: 35px;
+    height: 35px;
 
     display: flex;
     justify-content: center;
@@ -69,6 +69,11 @@
 }
 .brend-icon:hover{
     opacity: 1;
+
+
+}
+.brend-icon__item{
+    font-size: 20px;
 }
 .brend-icon__item:hover{
     zoom: 1.3;
