--- a/scss/blocks/_aboutCompany.scss
+++ b/scss/blocks/_aboutCompany.scss
@@ -33,6 +33,9 @@
     color: #fff;
 }
 .company-location, .company-adress{
+    display: flex;
+    gap: 15px;
+    align-items: center;
     font-size: 26px;
 
     color: #fff;
